Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal
Version 2.1.8
    Fixed a bug where Bite chance for Master Angler was displaying too many decimal places
    Fixed a bug where Abilities didn't check for permission nodes before activating
    MaxBonusLevel now has specific entries for Standard and Retro in advanced.yml
    MaxBonusLevel for Critical Strikes changed from 75/750 to 100/1000
    MaxBonusLevel of Dodge changed from 80/800 to 100/1000
    MaxBonusLevel of Rupture changed from 20/200 to 100/1000
    MaxBonusLevel of Counter Attack changed from 60/600 to 100/1000

Version 2.1.7
    Fixed an almost 6 year old bug where Salvage materials did not have a defined material count so they defaulted to 2 (which could lead to shovels giving back more diamonds than normal)
    Added spam detection for Unarmed's bonus damage and disarm
    Corrected an error where master angler for retro only required level 150 instead of 500 (update your skillranks.yml)
    Fixed a bug where Players could see hidden party members in the party member listings
    (API) Added addXpFromBlocks to ExperienceAPI to help make adding XP for a player easier
    (API) Added addXpFromBlocksBySkill to ExperienceAPI to help make adding XP for a player easier
    (API) Added addXpFromBlock to ExperienceAPI to help make adding XP for a player easier
    (API) Added addXpFromBlockBySkill to ExperienceAPI to help make adding XP for a player easier

Version 2.1.6
    Fixed a bug where Arcane Salvage could never fail
    Recolored some lines in the locale related to failure from white to red
    Fixed a bug where Salvage was giving back too many resources
    SubSkillFailure renamed to SubSkillFailed in config.yml
    SubSkillFailed now sends copies to chat by default
    SubSkillFailed no longer sends messages to the action bar by default

Version 2.1.5